<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.svea</groupId>
	<artifactId>webpay-common-pom</artifactId>
	<version>0.0.9-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Svea Webpay common libraries</name>	

	<description>A collection of modules used to communicate with Webpay's services</description>

	<distributionManagement>
		<repository>
			<id>internal.repo</id>
			<name>Temporary staging repository</name>
			<url>file://${project.build.directory}/mvn-repo</url>
		</repository>
	</distributionManagement>


	<properties>
		<github.global.server>github</github.global.server>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<gson.version>2.11.0</gson.version>
		<jakarta-xml-bind-api.version>4.0.2</jakarta-xml-bind-api.version>
		<jax.version>2.3.1</jax.version>
	</properties>

	<modules>
		<module>webpay-common</module>
		<module>webpayws</module>
		<module>webpayadminservice-client</module>
		<module>webpay-report-converters</module>
		<module>webpay-payment-gw</module>
	</modules>

	<dependencies>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.36</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.36</version>
		</dependency>

		<!-- JDK >=9 dependencies -->
		<!-- 
		<dependency>
			<groupId>javax.xml.ws</groupId>
			<artifactId>jaxws-api</artifactId>
			<version>${jax.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>${jax.version}</version>
		</dependency>
		
  		<dependency>
			<groupId>jakarta.jws</groupId>
			<artifactId>jakarta.jws-api</artifactId>
			<version>2.1.0</version>
		</dependency>
		
		 -->

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.1</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<version>5.10.1</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<includes>
						<include>**/AllTests.java</include>
					</includes>
				</configuration>
			</plugin>

			<plugin>
			    <groupId>com.github.github</groupId>
			    <artifactId>site-maven-plugin</artifactId>
			    <version>0.12</version>
			    <configuration>
			        <message>Maven artifacts for ${project.version}</message> <!-- git commit message -->
			        <noJekyll>true</noJekyll>  <!-- disable webpage processing -->
			        <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
			        <branch>refs/heads/mvn-repo</branch> <!-- remote branch name -->
			        <includes><include>**/*</include></includes>
			    </configuration>
			    <executions> <!-- run site-maven-plugin's 'site' target as part of the build's normal 'deploy' phase -->
			      <execution>
			        <goals>
			          <goal>site</goal>
			        </goals>
			        <phase>deploy</phase>
			      </execution>
			    </executions>
			</plugin>


		</plugins>
	</build>


	<organization>
		<name>Svea Bank AB</name>
		<url>https://www.svea.com</url>
	</organization>
	<scm>
		<url>https://github.com/sveawebpay/webpay-common</url>
		<connection>scm:git:git://github.com/sveawebpay/webpay-common.git</connection>
	</scm>
	<issueManagement>
		<url>https://github.com/sveawebpay/webpay-common/issues</url>
		<system>Github Issues</system>
	</issueManagement>
	<inceptionYear>2018</inceptionYear>
	<url>https://github.com/sveawebpay/webpay-common</url>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Daniel Tamm</name>
			<email>daniel.tamm@sveaekonomi.se</email>
			<organization>Svea Bank AB</organization>
			<organizationUrl>https://www.svea.com</organizationUrl>
		</developer>
	</developers>


</project>
